added images and more CSS

--- a/src/style.css
+++ b/src/style.css
@@ -5,15 +5,14 @@ body {
   font-style: normal;
 }
 img {
+  border-radius: 50%;
+  background-color: #fe8e08;
   opacity: 0.5;
 }
 header {
   font-size: 55px;
   text-align: center;
   font-weight: 500;
-}
-h1 {
-  text-align: center;
 }
 
 .recipe-container {
@@ -23,20 +22,56 @@ h1 {
   border-radius: 20px;
   box-shadow: 8px 5px 5px black;
   display: flex;
-  justify-content: space-between;
+  justify-content: space-evenly;
   background-color: #eef2f7;
   box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
 }
-.images {
-  color: black;
-  font-size: 50px;
+h1 {
+  margin: 0;
+  padding: 0;
+  display: block;
+  text-align: center;
+  font-size: 60px;
+}
+img {
+  border: 5px solid black;
+}
+.recipe-input {
+  background-color: rgba(64, 64, 64);
+  color: #fe8e08;
+  opacity: 0.6;
+  margin: 15 auto;
+  padding: 12px;
+  max-width: 100%;
+  border: none;
+  border-radius: 15px;
+}
+.recipe-button {
+  background: #9b9b9b;
+  margin-left: 3px;
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 12px;
+  border: none;
+  border-radius: 15px;
+}
+.recipe-button:hover {
+  background-color: #fe8e08;
+  opacity: 0.5;
+  color: rgb(64, 64, 64);
+  transition: 0.5;
 }
 
 .recipe-instructions {
-  border: 1px solid black;
+  margin: 10px auto;
+  padding: 10px;
+  border: 1px solid grey;
+  border-radius: 15px;
+  font-size: 30px;
+  font-weight: 300;
 }
 footer {
   text-align: center;
