--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,19 @@
 body {
-  background-color: #e1e1e1;
+  background-color: #fe8e08;
   font-family: "Zeyada", cursive;
-  font-weight: 400;
-  font-style: normal;
 }
 img {
   border-radius: 50%;
   background-color: #fe8e08;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 header {
   font-size: 55px;
   text-align: center;
   font-weight: 500;
+}
+iframe {
+  border-radius: 50%;
 }
 
 .recipe-container {
@@ -37,6 +38,7 @@ h1 {
   font-size: 60px;
 }
 img {
+  color: black;
   border: 5px solid black;
 }
 .recipe-input {
